2013-02-04: 3.0.1
* [FEATURE] Provide Capistrano deployment tasks (David Celis).
* [FEATURE] Allow specifying of Sphinx version. Is only useful for Flying Sphinx purposes at this point - has no impact on Riddle or Sphinx.
* [FEATURE] Support new JDBC configuration style (when JDBC can be used) (Kyle Stevens).
* [FIX] Referring to associations via polymorphic associations in an index definition now works.
* [FEATURE] Mysql2::Errors are wrapped as ThinkingSphinx::SphinxErrors, with subclasses of SyntaxError and ParseError used appropriately. Syntax and parse errors do not prompt a retry on a new connection.
* [CHANGE] Use connection pool for search queries. If a query fails, it will be retried on a new connection before raising if necessary.
* [CHANGE] Glaze always passes methods through to the underlying ActiveRecord::Base object if they don't exist on any of the panes.
* [FIX] Don't override foreign keys for polymorphic association replacements.
* [FIX] Quote namespaced model names in class field condition.
* [FEATURE] Polymorphic associations can be used within index definitions when the appropriate classes are set out.
* [FEATURE] Allow custom strings for SQL joins in index definitions.
* [FIX] New lines are maintained and escaped in custom source queries.
* [FIX] Subclasses of indexed models fire delta callbacks properly.
* [FIX] Thinking Sphinx can be loaded via thinking/sphinx, to satisfy Bundler.
* [FEATURE] indexer and searchd settings are added to the appropriate objects from config/thinking_sphinx.yml (@ygelfand).
* [FIX] New lines are maintained and escaped in sql_query values.

2013-01-02: 3.0.0
* [CHANGE] Updating Riddle dependency to 1.5.4.
* [FIX] Respect source options as well as underlying settings via the set_property method in index definitions.
* [FIX] Load real-time index definitions when listing fields, attributes, and/or conditions.
* [CHANGE] UTF-8 is now the default charset again (as it was in earlier Thinking Sphinx versions).