@@ -1,3 +1,6 @@
+Edge:
+* [FEATURE] Query errors are classified as such, instead of getting the base SphinxError.
+
 2013-02-04: 3.0.1
 * [FEATURE] Provide Capistrano deployment tasks (David Celis).
 * [FEATURE] Allow specifying of Sphinx version. Is only useful for Flying Sphinx purposes at this point - has no impact on Riddle or Sphinx.
